--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "cors": "^2.8.5",
     "expres": "0.0.5",
     "express": "^4.17.1",
-    "nodemon": "^2.0.14"
+    "knex": "^0.95.11",
+    "nodemon": "^2.0.14",
+    "sqlite3": "^5.0.2"
   }
 }
